@@ -4,6 +4,7 @@ package com.empresa.solicitudes.soporte123.controller;
 import com.empresa.solicitudes.soporte123.dto.AuthRequest;
 import com.empresa.solicitudes.soporte123.dto.RegisterRequest;
 import com.empresa.solicitudes.soporte123.models.MovUsuario;
+import com.empresa.solicitudes.soporte123.respository.MovUsuarioRepository;
 import com.empresa.solicitudes.soporte123.security.JwtUtil;
 import com.empresa.solicitudes.soporte123.service.UsuarioService;
 import lombok.RequiredArgsConstructor;
@@ -12,9 +13,12 @@ import org.springframework.security.authentication.AuthenticationManager;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
 import org.springframework.security.core.Authentication;
 import org.springframework.security.core.userdetails.UserDetails;
+import org.springframework.security.core.userdetails.UsernameNotFoundException;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.Collections;
+import java.util.HashMap;
+import java.util.Map;
 
 @RestController
 @RequestMapping("/auth")
@@ -25,6 +29,7 @@ public class AuthController {
     private final AuthenticationManager authManager;
     private final JwtUtil jwtUtil;
     private final UsuarioService usuarioService;
+    private final MovUsuarioRepository usuarioRepository;
 
     @PostMapping("/login")
     public ResponseEntity<?> login(@RequestBody AuthRequest request) {
@@ -35,7 +40,19 @@ public class AuthController {
         UserDetails userDetails = (UserDetails) authentication.getPrincipal();
         String token = jwtUtil.generarToken(userDetails);
 
-        return ResponseEntity.ok(Collections.singletonMap("token", token));
+        MovUsuario usuario = usuarioRepository.findByCorreo(request.getCorreo())
+                .orElseThrow(() -> new UsernameNotFoundException("Usuario no encontrado"));
+
+        Map<String, Object> response = new HashMap<>();
+        response.put("token", token);
+        response.put("usuario", Map.of(
+                "id", usuario.getN_id_usuario(),
+                "nombre", usuario.getS_nombre(),
+                "correo", usuario.getS_correo(),
+                "rol", usuario.getRol().getS_nombre_rol() // asumiendo que tienes entidad Rol
+        ));
+
+        return ResponseEntity.ok(response);
     }
 
     @PostMapping("/register")
